# multi-agent-rag-customer-support

./: .dev.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
customer_support_chat/: README.md
customer_support_chat/app/: graph.py  main.py
customer_support_chat/app/core/: logger.py  settings.py  state.py
customer_support_chat/app/models/: conversation.py
customer_support_chat/app/services/: assistant.py  chat_service.py  utils.py
customer_support_chat/app/services/assistants/: __init__.py  assistant_base.py  car_rental_assistant.py  excursion_assistant.py  flight_booking_assistant.py  hotel_booking_assistant.py  market_insights_assistant.py  primary_assistant.py  sentiment_analysis_assistant.py  social_engagement_assistant.py  token_info_assistant.py
customer_support_chat/app/services/assistants/prompts/: sp_car_rental_assistant.yml  sp_excursion_assistant.yml  sp_flight_booking_assistant.yml  sp_hotel_booking_assistant.yml  sp_market_insights_assistant.yml  sp_primary_assistant.yml  sp_sentiment_analysis_assistant.yml  sp_social_engagement_assistant.yml  sp_token_info_assistant.yml
customer_support_chat/app/services/tools/: __init__.py  cars.py  excursions.py  flights.py  hotels.py  lookup.py  market_insights.py  sentiment_analysis.py  social_engagement.py  token_info.py
customer_support_chat/app/services/vectordb/: chunkenizer.py  utils.py  vectordb.py
customer_support_chat/connectors/: vertex_ai_connector.py
customer_support_chat/data/: user_test_fetch_data.sql
vectorizer/: README.md
vectorizer/app/: main.py
vectorizer/app/core/: logger.py  settings.py
vectorizer/app/embeddings/: embedding_generator.py
vectorizer/app/vectordb/: chunkenizer.py  utils.py  vectordb.py
