[tool.poetry]
name = "customer-support-chat"
version = "0.1.0"
description = "Customer Support Chat Application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.19"
python-dotenv = "^1.0.1"
ipython = "^8.27.0"
duckduckgo-search = "^6.2.11"
qdrant-client = "^1.11.1"
pandas = "^2.2.2"
aiohttp = "^3.10.5"
tqdm = "^4.66.5"
more-itertools = "^10.5.0"
google-cloud = "^0.34.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
vertexai = "^1.67.1"
langchain-google-vertexai = "^2.0.1"
langchain-community = "^0.3.0"
langchain-google-genai = "^2.0.0"
langchain-openai = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
